--- a/doc/rapport/rapport.tex
+++ b/doc/rapport/rapport.tex
@@ -308,19 +308,26 @@ On every data set, for each hyperparameter, We computed the accuracy after a giv
 
 \begin{figure}[H]
 	\centering
-	\begin{subfigure}[b]{0.45\linewidth}
-		\includegraphics[width=\linewidth]{figs/hyperparams/SGD_c.png}
+	\begin{subfigure}[t]{0.45\linewidth}
+		\includegraphics[width=\linewidth]{figs/hyperparams/arrythmia_sgd_c.png}
 		\caption{\texttt{c} for the SGD for the data set Arrhythmia}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.45\linewidth}
-		\includegraphics[width=\linewidth]{figs/hyperparams/SGD_eps.png}
+	\begin{subfigure}[t]{0.45\linewidth}
+		\includegraphics[width=\linewidth]{figs/hyperparams/arrythmia_sgd_eps.png}
 		\caption{\texttt{eps} for the SGD for the data set Arrhythmia}
 	\end{subfigure}
-	\begin{subfigure}[b]{0.45\linewidth}
-		\includegraphics[width=\linewidth]{figs/hyperparams/SDCA_c.png}
+	\begin{subfigure}[t]{0.45\linewidth}
+		\includegraphics[width=\linewidth]{figs/hyperparams/arrythmia_sdca_c.png}
 		\caption{\texttt{c} for the SDCA for the data set Arrhythmia}
 	\end{subfigure}
-
+	\begin{subfigure}[t]{0.45\linewidth}
+		\includegraphics[width=\linewidth]{figs/hyperparams/adults_sgd_c.png}
+		\caption{\texttt{c} for the SGDfor the data set Adults}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.45\linewidth}
+		\includegraphics[width=\linewidth]{figs/hyperparams/adults_sdca_c.png}
+		\caption{\texttt{c} for the SDCA for the data set Adults}
+	\end{subfigure}
 	\caption{Selection of the hyperparameters}
 \end{figure}
 
